# slack-agent

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_READY_CHECKLIST.md  LICENSE  README.md  SECURITY.md
docs/: FINAL_STATUS_REPORT.md  MCP_INTEGRATION_COMPLETE.md
slack-agent/: CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  MCP_CONFIG.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  TEST_RESULTS.md  pyproject.toml
slack-agent/docs/: DEPLOY_CLAUDE.md  DEVELOPMENT.md  INDEX.md
slack-agent/src/slack_agent/: __main__.py  config.py  exceptions.py
slack-agent/src/slack_agent/core/: face_detector.py  state_machine.py  workflow.py
slack-agent/src/slack_agent/mcp/: tools.py
slack-agent/src/slack_agent/monitoring/: __init__.py  camera.py  health.py
slack-agent/src/slack_agent/utils/: __init__.py  logging.py
slack-agent/tests/: conftest.py  test_advanced.py  test_mcp_integration.py  test_mcp_startup.py  test_report.py
src/slack_agent/: __init__.py
src/slack_agent/mcp/: __init__.py
src/slack_agent/utils/: notifications.py
tests/: test_basic.py
