[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-slouch-mode"
version = "1.0.0"
description = "MCP plugin that pauses your Agent when you step away"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Agent Slouch Mode Contributors" }]
requires-python = ">=3.10"
keywords = ["mcp", "agent", "automation", "face-detection", "slouch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "mcp>=1.27.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agent-slouch-mode"
"Bug Tracker" = "https://github.com/yourusername/agent-slouch-mode/issues"
"Documentation" = "https://github.com/yourusername/agent-slouch-mode#readme"
"Source Code" = "https://github.com/yourusername/agent-slouch-mode"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock", "mypy>=1.5", "black>=23.0", "ruff>=0.1.0"]
mediapipe = ["mediapipe>=0.10.0"]

[project.scripts]
slouch-mode = "slouch_mode.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["slouch_mode*"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/slouch_mode"
